--- a/ZBD/Pages/Przedmioty Folder/PrzedmiotyLista.razor
+++ b/ZBD/Pages/Przedmioty Folder/PrzedmiotyLista.razor
@@ -5,7 +5,7 @@
 @inject NavigationManager navManager
 
 <PageTitle>Przedmioty</PageTitle>
-<h3>Lista Przedmiotów</h3>
+<h3>Lista przedmiotów <button class="btn btn-primary" @onclick="(() => ShowEditItem())">Dodaj przedmiot</button></h3>
 
 <table class="table">
 	<thead>
@@ -45,5 +45,10 @@
 	private void ShowItem(int id)
 	{
 		navManager.NavigateTo($"/przedmioty/{id}");
+	}
+
+	private void ShowEditItem()
+	{
+		navManager.NavigateTo("/przedmioty/dodaj");
 	}
 }
