--- a/ZBD/Shared/NavMenu.razor
+++ b/ZBD/Shared/NavMenu.razor
@@ -38,6 +38,11 @@
                 <span class="oi oi-people" aria-hidden="true"></span> Bohaterowie
             </NavLink>
         </div>
+        @*<div class="nav-item px-3">
+            <NavLink class="nav-link" href="bohaterowie/kontry">
+                <span class="oi oi-shield" aria-hidden="true"></span> Kontry
+            </NavLink>
+        </div>*@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="przedmioty">
                 <span class="oi oi-basket" aria-hidden="true"></span> Przedmioty
