--- a/ZBD/Shared/NavMenu.razor
+++ b/ZBD/Shared/NavMenu.razor
@@ -32,7 +32,21 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </div>*@
-
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="graczezawodowi">
+                <span class="oi oi-aperture" aria-hidden="true"></span> Pro Gracze
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="druzyny">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Drużyny
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="turnieje">
+            <span class="oi oi-calendar" aria-hidden="true"></span> Turnieje
+            </NavLink>
+        </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="bohaterowie">
                 <span class="oi oi-people" aria-hidden="true"></span> Bohaterowie
