--- a/ZBD/Pages/Komponenty Folder/KomponentyAddUpdate.razor
+++ b/ZBD/Pages/Komponenty Folder/KomponentyAddUpdate.razor
@@ -61,7 +61,7 @@
 		{
 			List<KomponentyPrzedmiotow> components = new();
 			components = komponentyService.GetAll();
-			component.Id = components.Last().Id + 1;
+			//component.Id = components.Last().Id + 1;
 		}
 		component.IdPrzed = idPrzed;
 
