--- a/ZBD/Pages/Gracze Folder/GraczeDisplay.razor
+++ b/ZBD/Pages/Gracze Folder/GraczeDisplay.razor
@@ -62,7 +62,7 @@
                         <td>@game.Strona</td>
                         <td>@game.BohaterowieNazwa</td>
                         <td>
-                            <button class="btn btn-primary" @onclick="(() => ShowGame(game.IdMeczu))"><i class="oi oi-info"></i></button>
+                        <button class="btn btn-primary oi oi-info" @onclick="(() => ShowGame(game.IdMeczu))"></button>
                         </td>
                     </tr>
                 }   
