--- a/ZBD/Pages/Kontry Folder/KontryEdit.razor
+++ b/ZBD/Pages/Kontry Folder/KontryEdit.razor
@@ -58,6 +58,6 @@
 
 	private void Cancel()
 	{
-		navManager.NavigateTo($"/bohaterowie/{bohater}");
+		navManager.NavigateTo($"/bohaterowie/{bohater}", true);
 	}
 }
