--- a/ZBD/Shared/NavMenu.razor
+++ b/ZBD/Shared/NavMenu.razor
@@ -42,11 +42,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Drużyny
             </NavLink>
         </div>
-        <div class="nav-item px-3">
+@*        <div class="nav-item px-3">
             <NavLink class="nav-link" href="turnieje">
             <span class="oi oi-calendar" aria-hidden="true"></span> Turnieje
             </NavLink>
-        </div>
+        </div>*@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="bohaterowie">
                 <span class="oi oi-people" aria-hidden="true"></span> Bohaterowie
