--- a/ZBD/Pages/Gracze Zawodowi Folder/GraczeZawodowiDisplay.razor
+++ b/ZBD/Pages/Gracze Zawodowi Folder/GraczeZawodowiDisplay.razor
@@ -7,80 +7,60 @@
 <PageTitle>@pro.Nick</PageTitle>
 <h3>@pro.ImieINazwisko - @pro.Nick <button class="btn btn-primary oi oi-pencil" @onclick="(() => ShowEditPro(nick))"></button></h3>
 
-<div class="table">
+
+<div class="table" >
     <table class="table">
-        <thead>
-            <tr>
-                <th>Zdjęcie</th>
-                <th>Procent wygranych</th>
-                <th>Średnie KDA</th>
-            </tr>
-        </thead>
         <tbody>
             <tr>
-                <td>
+                <td align="center" valign="middle">
                     <img src="@pro.Zdjecie">
                 </td>
-                <td><h3>@wr%</h3></td>
-                <td><h3>@avgKda</h3></td>
+                <td>
+                    <table class="table table-striped">
+                        <thead>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td><strong>Imię i nazwisko</strong></td>
+                                <td>@pro.ImieINazwisko</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Nick</strong></td>
+                                <td>@pro.Nick</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Kraj pochodzenia</strong></td>
+                                <td>@pro.Kraj</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Data urodzenia</strong></td>
+                                <td>@pro.DataUrodzin.ToShortDateString()</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Rezydencja</strong></td>
+                                <td>@pro.Rezydencja</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Drużyna</strong></td>
+                                <td>@pro.IdDruzyny</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Rola</strong></td>
+                                <td>@pro.Rola</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Ulubiona postać</strong></td>
+                                <td>@pro.UlubionyBohater</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </td>
             </tr>
         </tbody>
     </table>
+    
 </div>
 
-
-<div class="table">
-    <table class="table" title="Statystyki">
-        <tbody>
-            <tr>
-                <th>Imię i nazwisko</th>
-                <td>@pro.ImieINazwisko</td>
-            </tr>
-        </tbody>
-        <tbody>
-            <tr>
-                <th>Nick</th>
-                <td>@pro.Nick</td>
-            </tr>
-        </tbody>
-        <tbody>
-            <tr>
-                <th>Kraj pochodzenia</th>
-                <td>@pro.Kraj</td>
-            </tr>
-        </tbody>
-        <tbody>
-            <tr>
-                <th>Data urodzenia</th>
-                <td>@pro.DataUrodzin.ToShortDateString()</td>
-            </tr>
-        </tbody>
-        <tbody>
-            <tr>
-                <th>Rezydencja</th>
-                <td>@pro.Rezydencja</td>
-            </tr>
-        </tbody>
-        <tbody>
-            <tr>
-                <th>Drużyna</th>
-                <td>@pro.IdDruzyny</td>
-            </tr>
-        </tbody>
-        <tbody>
-            <tr>
-                <th>Rola</th>
-                <td>@pro.Rola</td>
-            </tr>
-        </tbody>
-        <tbody>
-            <tr>
-                <th>Ulubiona postać</th>
-                <td>@pro.UlubionyBohater</td>
-            </tr>
-        </tbody>
-    </table>
-</div>
 
 <br />
 <h5><strong>Gry:</strong></h5>
